--- a/src/styles.css
+++ b/src/styles.css
@@ -20,18 +20,21 @@ body {
 }
 
 .content {
-  min-height: calc(100vh - 140px);
-  width: 760px;
+  min-height: calc(100vh - 100px);
+  width: 720px;
   max-width: 100%;
   margin: auto;
   padding: 20px;
 }
-
 .section {
   height: 450px;
   width: 100%;
+  margin-top: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
   border: 1px solid black;
+}
+.section:first-child {
+  margin-top: 0;
 }
